--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Flask = "^2.0.3"
 pytest-mock = "^3.7.0"
 pytest-flask = "^1.2.0"
+SQLAlchemy = "^1.4.32"
 
 [tool.poetry.dev-dependencies]
 pytest = "^7.0"
