Added tests (76% coverage), linter's check, module for exchange rate updating

--- a/setup.cfg
+++ b/setup.cfg
@@ -76,6 +76,8 @@ max-statements=30
 max-attributes=10
 # Maximum number of public methods for a class (see R0904).
 max-public-methods=10
+# Для инициализации моделей нужно больше аргументов
+max-args=7
 
 [mypy]
 check_untyped_defs = true
