--- a/setup.cfg
+++ b/setup.cfg
@@ -66,6 +66,9 @@ disable=
     R0914, ; Too many local variables (m/n) (too-many-locals)
     W0511, ; TODO needed? (fixme)
     E0611, ; No name ‘<name>’ in module ‘<module>’ (no-name-in-module)
+    
+    # Thera are a lot of similar lines in tests
+    R0801, ; Similar lines in 2 files 
 # Maximum number of nested code blocks for function / method
 max-nested-blocks=3
 # Maximum number of branch for function / method body
