Added db_session decorator, commented asserts, fixed tests.

--- a/setup.cfg
+++ b/setup.cfg
@@ -69,6 +69,8 @@ disable=
     
     # Thera are a lot of similar lines in tests
     R0801, ; Similar lines in 2 files 
+
+    E1120, ; Because pylint does not recognize arguments passed from decorators
 # Maximum number of nested code blocks for function / method
 max-nested-blocks=3
 # Maximum number of branch for function / method body
@@ -89,6 +91,8 @@ disallow_incomplete_defs = true
 disallow_untyped_defs = true
 ignore_missing_imports = true
 no_implicit_optional = true
+# Because pylint does not recognize arguments passed from decorators
+disable_error_code = call-arg  
 
 [mypy-tests.*]
 disallow_untyped_defs = false
